tools/hermes/tests/fixtures/is_valid_verification/expected.stderr
  × Tactic `decide` proved that the proposition
  │   False
  │ is false
    ╭─[[PROJECT_ROOT]/src/lib.rs:24:48]
 23 │ /// proof
 24 │ ///   simp [make_bad, Hermes.IsValid.isValid]; decide
    ·                                                ───┬──
    ·                                                   ╰── here
 25 │ /// ```
    ╰────

Error: Lean verification failed
